assignment 2 set up
