# audit/openapi.yaml
@@ -78,7 +78,30 @@ paths:
                     type: string
         "404":
           description: Not Found
-
+  /health:
+    get:
+      summary: get service health
+      operationId: app.get_health
+      description: Get service health every 20 seconds
+      responses:
+        "200":
+          description: Service is running
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        "500":
+          description: Service is down
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
 components:
   schemas:
     OrderEvent:
